<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/check_vehicles"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.CreateVehicleActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_register_vehicle"
        android:layout_marginTop="@dimen/common_16"
        android:textSize="@dimen/text_20"
        android:fontFamily="@font/nunito_extra_bold"
        android:gravity="center"/>

    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/step_vehicles"
        android:layout_width="match_parent"
        android:visibility="visible"
        android:layout_height="480dp"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/max_length_plate"
                app:helperText="@string/required"
                android:hint="@string/hint_plate"
                app:endIconMode="clear_text"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_marginTop="@dimen/common_12"
                android:paddingHorizontal="@dimen/common_16">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_plate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLength="@integer/max_length_plate"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_12"
                android:fontFamily="@font/nunito_semi_bold"
                android:gravity="center"
                android:textSize="@dimen/text_20"
                android:text="@string/label_select_line" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="340dp"
                android:layout_marginTop="@dimen/common_12"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/common_8">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="110dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/radio_button_parent_models"
                        android:paddingHorizontal="@dimen/common_12">

                    </LinearLayout>

                </ScrollView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_12"
                    android:fontFamily="@font/nunito_semi_bold"
                    android:gravity="center"
                    android:textSize="@dimen/text_20"
                    android:text="@string/label_select_colo_vehicle"/>

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="110dp"
                    android:layout_marginTop="@dimen/common_12">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:id="@+id/radio_button_parent_colors"
                        android:paddingHorizontal="@dimen/common_12">

                    </LinearLayout>

                </ScrollView>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_vehicle_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nunito_semi_bold"
        android:textColor="@color/md_blue_grey_50"
        android:backgroundTint="@color/blue_500"
        android:layout_marginHorizontal="@dimen/common_12"
        android:text="@string/btn_register_vehicle"/>

</LinearLayout>